refactor: controller 에서 토큰을 추출하여 넘길 수 있도록 변경 및 Dto 추가 (#19)